alter the models and fix some layout problems

--- a/fire/static/css/style.css
+++ b/fire/static/css/style.css
@@ -78,13 +78,14 @@ div {
 .head-bar{
     height: 75px;
     display: grid;
-    grid-template-columns: auto 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: auto auto auto;
     margin: 0;
     -webkit-border-radius: 0 0 5px 5px;
     -moz-border-radius: 0 0 5px 5px;
     border-radius: 0 0 5px 5px;
     background: rgba(36, 36, 36, 0.2);
 }
+
 .head-bar .btn{
     max-width: 140px;
     border: 0;
@@ -93,6 +94,11 @@ div {
     align-items: center;
     background-color: transparent;
 
+}
+
+.overview-button-div{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 .head-bar .btn button, .head-bar a{
     height: 50px;
@@ -383,14 +389,14 @@ div {
 .grid-4 {
     display: grid;
     grid-template-columns: repeat(4,1fr);
-    grid-gap: 10px;
+    grid-gap: 2px;
 
 }
 
 .grid-2 {
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    grid-gap: 10px;
+    grid-gap: 5px;
 
 }
 .monitor-live-main div{
@@ -558,4 +564,29 @@ div {
 }
 #wrap .next:hover{
     background: url(../img/icon-slides.png) 123px;
+}
+
+@media screen and (max-width: 1440px){
+    .head-bar{
+        display: grid;
+        grid-template-rows: 40px 50px;
+        grid-template-areas: 
+            "title title title title"
+            "button button button state";
+    }
+    .head-title{
+        grid-area: title;
+    }
+    .overview-button-div{
+        grid-area: button;
+    }
+    .session-state{
+        grid-area: state;
+    }
+    .head-bar{
+        height:90px;
+    }
+    .head-bar .btn{
+        height: 50px;
+    }
 }
